test/parser/block-comment-nested-unterminated.delta.output
block-comment-nested-unterminated.delta:4:1: error: unterminated block comment
/*
^
