test/parser/block-comment-nested-unterminated.delta
// RUN: %check_errors %not %delta -parse %s

// CHECK: [[@LINE+1]]:1: error: unterminated block comment
/*
/*
*/
